Create modified starting organism and modify events.cfg to utilize it

--- a/experiments/2022-3-29-PaperDuplication/hpcc/config/events.cfg
+++ b/experiments/2022-3-29-PaperDuplication/hpcc/config/events.cfg
@@ -1,5 +1,5 @@
 # Seed the population with a single organism
-u begin Inject default-heads.org
+u begin Inject modifiedNOPsAncestralOrganism.org
 
 # Print all of the standard data files...
 u 0:100:end PrintAverageData       # Save info about they average genotypes
@@ -28,4 +28,4 @@ u 0 SetReactionValue EQU 1
 
 # Setup the exit time and full population data collection.
 u 0:500:end SavePopulation         # Save current state of population.
-u 200000 Exit                        # exit
+u 50000 Exit                        # exit
