--- a/experiments/2022-3-29-PaperDuplication/hpcc/config/events.cfg
+++ b/experiments/2022-3-29-PaperDuplication/hpcc/config/events.cfg
@@ -1,5 +1,5 @@
 # Seed the population with a single organism
-u begin Inject modifiedNOPsAncestralOrganism.org
+u begin Inject default-heads.org
 
 # Print all of the standard data files...
 u 0:100:end PrintAverageData       # Save info about they average genotypes
