--- a/experiments/2022-3-29-PaperDuplication/hpcc/config/analyzeTemplate.cfg
+++ b/experiments/2022-3-29-PaperDuplication/hpcc/config/analyzeTemplate.cfg
@@ -25,5 +25,5 @@ SET_BATCH 1
 FIND_LINEAGE num_cpus
 RECALC
 
-DETAIL detail_MostNumLineageAt${updateAtWhichToAnalyze}.dat id update_born parent_muts task.0 task.1 task.2 task.3 task.4 task.5 task.6 task.7 task.8 viable gest_time efficiency length sequence
+DETAIL detail_MostNumLineageAt${updateAtWhichToAnalyze}.dat id update_born parent_dist depth parent_muts task.0 task.1 task.2 task.3 task.4 task.5 task.6 task.7 task.8 viable gest_time efficiency length sequence
 PRINT
